--- a/src/components/Container.astro
+++ b/src/components/Container.astro
@@ -4,9 +4,10 @@
 
 <style>
   .container {
+    width: 100%;
     margin: 0 auto;
     max-width: var(--container-max-width, 960px);
-    padding: 0 var(--container-padding, 1rem);
+    padding: var(--container-padding, 1rem);
   }
 </style>
 
