--- a/src/layouts/Page.astro
+++ b/src/layouts/Page.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from './Base.astro';
 import type { Props as BaseHeadProps } from '../components/BaseHead.astro';
-// import Header from '../components/Header.astro';
-// import Footer from '../components/Footer.astro';
+import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 
 export interface Props {
 	seo?: BaseHeadProps;
@@ -12,7 +12,7 @@ const { seo } = Astro.props as Props;
 ---
 
 <Layout seo={seo}>
-  <!-- <Header slot="header" /> -->
+  <Header slot="header" />
 		<slot />
-  <!-- <Footer slot="footer" /> -->
+  <Footer slot="footer" />
 </Layout>
