added aspect ratio

--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -58,6 +58,7 @@ import {formatDate} from '../utils/helpers'
     grid-template-columns: 1fr;
   }
   .post-preview__img {
+    aspect-ratio: 16/9;
     width: 100%;
     height: 100%;
     object-fit: cover;
