--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -83,5 +83,10 @@ import LittleSticksPlug from "./LittleSticksPlug.astro";
       grid-template-columns: 1fr;
       gap: 2rem;
     }
+    .footer-bottom__container {
+      flex-direction: column;
+      align-items: flex-start;
+      gap: 1rem;
+    }
   }
 </style>
