--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -44,8 +44,8 @@ import LittleSticksPlug from "./LittleSticksPlug.astro";
   footer {
     position: relative;
     min-height: 200px;
-    background-color: var(--theme-background-dark);
-    color: var(--theme-on-background-dark);
+    background-color: var(--theme-footer-background);
+    color: var(--theme-on-footer-background);
   }
   .footer-links__grid {
     padding: 10vh 0;
