--- a/src/layouts/Base.astro
+++ b/src/layouts/Base.astro
@@ -17,7 +17,7 @@ const { seo } = Astro.props;
   </head>
   <body>
     <slot name="header" />
-    <main>
+    <main class="flow">
       <slot />
     </main>
     <slot name="footer" />
