--- a/src/layouts/Post.astro
+++ b/src/layouts/Post.astro
@@ -35,7 +35,7 @@ const { frontmatter } = Astro.props;
           )
         }
       </div>
-      <div class="post-content__content">
+      <div class="post-content__content flow">
         <slot />
       </div>
     </article>
@@ -50,7 +50,7 @@ const { frontmatter } = Astro.props;
     text-align: center;
   }
   .post-content__article {
-    padding: 10vh 0;
+    padding: 5vh 0;
   }
   .post-content__title {
     margin: 1rem auto;
