small footer text

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -71,6 +71,7 @@ import LittleSticksPlug from "./LittleSticksPlug.astro";
     display: flex;
     justify-content: space-between;
     align-items: center;
+    font-size: var(--step--2);
   }
 
   @media(max-width: 768px) {
