--- a/src/components/BaseHead.astro
+++ b/src/components/BaseHead.astro
@@ -19,11 +19,12 @@ const image = new URL(Astro.props.image || './social.png', Astro.site);
 
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover" />
-
-
+<!-- Favicon -->
+<link rel="icon" type="image/svg" href="/favicon.svg" />
 <!-- Primary Meta Tags -->
 <title>{title || settings.title}</title>
 <meta name="title" content={title || settings.title} />
+
 <meta name="description" content={description || settings.description} />
 <meta name="generator" content={Astro.generator} />
 <!-- settingsmap -->
