--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -8,7 +8,7 @@ import { ThemeToggleButton } from './ThemeToggleButton/ThemeToggleButton';
 <header>
   <Container>
     <nav>
-      <a class="header__logo" href="/">
+      <a class="header__logo" href="/" title="Navigate Home">
         <Logo />
       </a>
       <SocialList />
