--- a/src/components/SocialList.astro
+++ b/src/components/SocialList.astro
@@ -6,7 +6,7 @@ import { socials } from '../data/socials';
 <ul class="social__list">
   {socials.map(social => (
   <li>
-    <a href={social.url}>
+    <a href={social.url} title={`Open ${social.name} profile`}>
       <Icon name={social.icon} width="24px" height="24px" />
     </a>
   </li>))}
