--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -2,8 +2,11 @@
 import Container from './Container.astro';
 import Logo from './Logo.astro';
 import SocialList from './SocialList.astro';
-import { ThemeToggleButton } from './ThemeToggleButton/ThemeToggleButton';
 ---
+
+<script>
+  import './ThemeToggleButton/theme-toggle-button'
+</script>
 
 <header>
   <Container>
@@ -15,8 +18,8 @@ import { ThemeToggleButton } from './ThemeToggleButton/ThemeToggleButton';
     </nav>
   </Container>
   <div class="theme-toggle__container">
-    <!-- <Icon name="ic:round-dark-mode" width="18px" height="18px" /> -->
-    <ThemeToggleButton client:load />
+    <!-- I was running into some issues with the Lit integration so I'm using it as a client script for now -->
+    <theme-toggle-button></theme-toggle-button>
   </div>
 </header>
 
