--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,8 @@
 ---
 import Layout from '../layouts/Page.astro'
 import Container from '../components/Container.astro';
-import BlogPostPreview from '../components/BlogPostPreview.astro';
+import BlogPostsList from '../components/BlogPostsList.astro';
+
 const posts = (await Astro.glob('./blog/*.{md,mdx}')).sort(
 	(a, b) => new Date(b.frontmatter.publishedAt).valueOf() - new Date(a.frontmatter.publishedAt).valueOf()
 );
@@ -19,14 +20,6 @@ const seo = {
   h1 {
     text-align: center;
   }
-  ul {
-    margin: 0 0 10vh 0;
-    list-style: none;
-    padding: 0;
-    display: grid;
-    grid-template-columns: 1fr;
-    gap: 3rem;
-  }
 </style>
 
 <Layout seo={seo}>
@@ -34,15 +27,7 @@ const seo = {
     <div class="home-hero-text__container">
       <h1>Blog</h1>
     </div>
-    <ul>
-        {posts.map((post) => {
-          return (
-            <li>
-              <BlogPostPreview post={post}/>
-            </li>
-          );
-        })}
-    </ul>
+    <BlogPostsList posts={posts}/>
   </Container>
 </Layout>
 
