--- a/src/components/LittleSticksPlug.astro
+++ b/src/components/LittleSticksPlug.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 ---
 
-<a class="btn" href="https://littlesticks.dev/templates">Get This Template <span class="icon"><Icon name="ic:round-north-east" width="18px" height="18px"/></span></a>
+<a class="btn" href="https://littlesticks.dev/templates/simple-blog/">Get This Template <span class="icon"><Icon name="ic:round-north-east" width="18px" height="18px"/></span></a>
 
 <style>
 .btn {
@@ -14,15 +14,21 @@ import { Icon } from 'astro-icon';
   color: hsl(0, 0%, 5%);
   border-radius: 0.5rem;
   text-decoration: none;
+  font-size: var(--step--2);
 }
 
 .btn:hover {
   background-color: hsl(0, 0%, 95%);
 }
 
+.btn:hover .icon {
+  transform: translate(0.15rem, -0.15rem);
+}
+
 .icon {
   display: inline-block;
   margin: 0.25rem 0 0 0.25rem;
   vertical-align: middle; 
+  transition: transform 0.2s ease;
 }
 </style>
