working on fade-in animation

--- a/src/components/BlogPostPreview.astro
+++ b/src/components/BlogPostPreview.astro
@@ -4,7 +4,7 @@ import {formatDate} from '../utils/helpers'
 
 ---
 
-<a class="post-preview__link" href={post.url}>
+<a class="post-preview__link fade-in" href={post.url}>
 <article class="post-preview__article">
   <!-- Hopefully we'll be able to use Astro's image integration for this soon -->
   <picture>
