--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -25,7 +25,7 @@ const seo = {
 <Layout seo={seo}>
   <Container>
     <div class="home-hero-text__container">
-      <h1>Blog</h1>
+      <h1 class="fade-in">Blog</h1>
     </div>
     <BlogPostsList posts={posts}/>
   </Container>
