--- a/src/components/LittleSticksPlug.astro
+++ b/src/components/LittleSticksPlug.astro
@@ -2,7 +2,7 @@
 import { Icon } from 'astro-icon';
 ---
 
-<a class="btn" href="https://littlesticks.dev/templates/simple-blog/">Get This Template <span class="icon"><Icon name="ic:round-north-east" width="18px" height="18px"/></span></a>
+<a class="btn" href="https://littlesticks.dev/templates/simple-blog/" target="_blank" rel="noopener noreferrer">Get This Template <span class="icon"><Icon name="ic:round-north-east" width="18px" height="18px"/></span></a>
 
 <style>
 .btn {
